public/style/components/tag-search/_index.scss
.tag-search {
  max-width: 800px;
  margin: 0 auto;
  padding: $standard-padding;

}

.tag-search__filters {
  width: 100%;

  position: relative;

  min-height: 50px;

  background-color: $c-grey-100;
  border: 1px solid $c-grey-300;

  padding: $standard-padding;
}

.tag-search__create {

  @extend %button--green;

  position: absolute;
  right: 0;
  top: 0;
}


.tag-search__filters__group {
  display: inline-block;

  label {
    @extend %fs-data-2;

    font-weight: bold;

    display: block;
  }

}

.tag-search__input {
  margin-right: $standard-padding;
}

